@@ -75,7 +75,7 @@ else
   PROJECT_PATH="${SCRIPT_PATH}/../../../${2}"
 fi
 
-SDK_JAVADOCS="${PROJECT_PATH}/${API}/target/site/${APIDOCS}"
+SDK_JAVADOCS="${PROJECT_PATH}/target/site/${APIDOCS}"
 
 CHECK_INCLUDES="false"
 TEST_INCLUDES_LOCAL="local"
@@ -118,30 +118,34 @@ WEB="web"
 GOOGLE_ANALYTICS_GITHUB="UA-55081520-2"
 GITHUB="github"
 
+# BUILD.rst
+BUILD_RST="BUILD.rst"
+BUILD_RST_HASH="0d41d293a6e11c0461bf3ff3be03c242"
+
 
 function usage() {
   cd $PROJECT_PATH
   PROJECT_PATH=`pwd`
   echo "Build script for '${PROJECT_CAPS}' docs"
   echo "Usage: ${SCRIPT} < option > [source test_includes]"
-  echo ""
+  echo
   echo "  Options (select one)"
   echo "    build          Clean build of javadocs and HTML docs, copy javadocs and PDFs into place, zip results"
   echo "    build-github   Clean build and zip for placing on GitHub"
   echo "    build-web      Clean build and zip for placing on docs.cask.co webserver"
-  echo ""
+  echo
   echo "    docs           Clean build of docs"
   echo "    javadocs       Clean build of javadocs ($API module only) for SDK and website"
   echo "    javadocs-full  Clean build of javadocs for all modules"
   echo "    license-pdfs   Clean build of License Dependency PDFs"
-  echo ""
+  echo
   echo "    check-includes Check if included files have changed from source"
   echo "    depends        Build Site listing dependencies"
   echo "    sdk            Build SDK"
   echo "  with"
   echo "    source         Path to $PROJECT source for javadocs, if not $PROJECT_PATH"
   echo "    test_includes  local, remote or neither (default: remote); must specify source if used"
-  echo " "
+  echo
 }
 
 function clean() {
@@ -169,13 +173,17 @@ function build_docs_google() {
 function build_javadocs_full() {
   cd ${PROJECT_PATH}
   set_mvn_environment
-  MAVEN_OPTS="-Xmx512m" mvn clean site -DskipTests
+  check_build_for_changes
+  echo "build_javadocs_full: Currently not implemented"
+  return
+  # MAVEN_OPTS="-Xmx512m" mvn clean site -DskipTests
 }
 
 function build_javadocs_api() {
   cd ${PROJECT_PATH}
   set_mvn_environment
-  MAVEN_OPTS="-Xmx512m" mvn clean package javadoc:javadoc -pl $API -am -DskipTests -P release
+  check_build_for_changes
+  MAVEN_OPTS="-Xmx1024m" mvn clean install -P examples,templates,release -DskipTests -Dgpg.skip=true && mvn clean site -DskipTests -P templates -DisOffline=false
 }
 
 function build_javadocs_sdk() {
@@ -196,21 +204,15 @@ function build_license_pdfs() {
   PROJECT_VERSION_TRIMMED=${PROJECT_VERSION%%-SNAPSHOT*}
   rm -rf ${SCRIPT_PATH}/${LICENSES_PDF}
   mkdir ${SCRIPT_PATH}/${LICENSES_PDF}
-  E_DEP="cdap-enterprise-dependencies"
-  L_DEP="cdap-level-1-dependencies"
-  S_DEP="cdap-standalone-dependencies"
   # paths are relative to location of $DOC_GEN_PY script
   LIC_PDF="../../../${REFERENCE}/${LICENSES_PDF}"
   LIC_RST="../${REFERENCE}/source/${LICENSES}"
-  echo ""
-  echo "Building ${E_DEP}"
-  python ${DOC_GEN_PY} -g pdf -o ${LIC_PDF}/${E_DEP}.pdf -b ${PROJECT_VERSION_TRIMMED} ${LIC_RST}/${E_DEP}.rst
-  echo ""
-  echo "Building $L_DEP"
-  python ${DOC_GEN_PY} -g pdf -o ${LIC_PDF}/${L_DEP}.pdf -b ${PROJECT_VERSION_TRIMMED} ${LIC_RST}/${L_DEP}.rst
-  echo ""
-  echo "Building $S_DEP"
-  python ${DOC_GEN_PY} -g pdf -o ${LIC_PDF}/${S_DEP}.pdf -b ${PROJECT_VERSION_TRIMMED} ${LIC_RST}/${S_DEP}.rst
+  PDFS="cdap-enterprise-dependencies cdap-level-1-dependencies cdap-standalone-dependencies cdap-ui-dependencies"
+  for PDF in ${PDFS}; do
+    echo ""
+    echo "Building ${PDF}"
+    python ${DOC_GEN_PY} -g pdf -o ${LIC_PDF}/${PDF}.pdf -b ${PROJECT_VERSION_TRIMMED} ${LIC_RST}/${PDF}.rst
+  done
 }
 
 function copy_license_pdfs() {
@@ -323,7 +325,9 @@ function test_an_include() {
 function build_standalone() {
   cd ${PROJECT_PATH}
   set_mvn_environment
-  MAVEN_OPTS="-Xmx1024m" mvn clean package -DskipTests -P examples,templates -pl cdap-examples,cdap-app-templates/cdap-etl -am -amd && MAVEN_OPTS="-Xmx1024m" mvn package -pl cdap-standalone -am -DskipTests -P dist,release
+  check_build_for_changes
+  mvn clean
+  MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m" mvn package -pl cdap-standalone,cdap-app-templates/cdap-etl,cdap-examples -am -amd -DskipTests -P examples,templates,dist,release,unit-tests
 }
 
 function build_sdk() {
@@ -334,6 +338,11 @@ function build_dependencies() {
   cd $PROJECT_PATH
   set_mvn_environment
   mvn clean package site -am -Pjavadocs -DskipTests
+}
+
+function check_build_for_changes() {
+  BUILD_RST_PATH="${PROJECT_PATH}/${BUILD_RST}"
+  test_an_include ${BUILD_RST_HASH} ${BUILD_RST_PATH}
 }
 
 function version() {
@@ -365,13 +374,13 @@ function version() {
       GIT_BRANCH_TYPE="develop-feature"
     fi
   fi
-  cd $current_directory
+  cd ${current_directory}
   IFS="${OIFS}"
 }
 
 function display_version() {
   version
-  echo ""
+  echo
   echo "PROJECT_PATH: ${PROJECT_PATH}"
   echo "PROJECT_VERSION: ${PROJECT_VERSION}"
   echo "PROJECT_LONG_VERSION: ${PROJECT_LONG_VERSION}"
@@ -414,14 +423,14 @@ function display_any_messages() {
   if [[ "x${MESSAGES}" != "x" || -s ${SPHINX_MESSAGES} ]]; then
     local m="Warning Messages for \"${MANUAL}\":"
     if [ "x${MESSAGES}" != "x" ]; then
-      echo ""
+      echo 
       echo_red_bold "${m}"
-      echo ""
+      echo 
       echo -e "${MESSAGES}"
     fi
     if [ -s ${SPHINX_MESSAGES} ]; then
       m="Sphinx ${m}"
-      echo ""
+      echo
       echo_red_bold "${m}"
       echo ${m} >> ${TMP_MESSAGES_FILE}
       cat ${SPHINX_MESSAGES} | while read line
@@ -435,9 +444,9 @@ function display_any_messages() {
 
 function display_messages_file() {
   if [[ "x${TMP_MESSAGES_FILE}" != "x" && -a ${TMP_MESSAGES_FILE} ]]; then
-    echo ""
+    echo 
     echo "Warning Messages: ${TMP_MESSAGES_FILE}"
-    echo ""
+    echo 
     echo >> ${TMP_MESSAGES_FILE}
     cat ${TMP_MESSAGES_FILE} | while read line
     do
